<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:id="@+id/showProposalBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:background="@color/black" >
    
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/backChar"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/lightGrey" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@drawable/open_antrag" />

        <TextView
            android:id="@+id/textHeadline"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:text="@string/showProposal"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/lightGrey" />
    </LinearLayout>

    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
    	<TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/version"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:background="@color/lightGrey"
            android:textColor="@color/darkGrey" />
        <TextView
            android:id="@+id/appVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="..."
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/darkGrey" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/license"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:background="@color/lightGrey"
            android:textColor="@color/darkGrey" />
    	<TextView
            android:id="@+id/appLicense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:inputType="textEmailAddress"
            android:text="..."
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/darkGrey" />
    	<TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/github"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:background="@color/lightGrey"
            android:textColor="@color/darkGrey" />
    	<TextView
            android:id="@+id/appGitHub"
            android:autoLink="web"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="..."
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/darkGrey" />
    </LinearLayout>

</LinearLayout>
