<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:id="@+id/showProposalBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:background="@color/black" >
    
        <ImageView
	        android:id="@+id/imageView2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_centerVertical="true"
	        android:src="@drawable/oa_left" />
    	
    	<ImageView
	        android:id="@+id/imageView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_centerVertical="true"
	        android:src="@drawable/open_antrag" />
	    
	    <TextView
	        android:id="@+id/textHeadline"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_centerVertical="true"
	        android:text="@string/setFilter"
   	        android:textColor ="@color/lightGrey"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/exception"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
    	<TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/version"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:background="@color/lightGrey"
            android:textColor="@color/darkGrey" />
        <TextView
            android:id="@+id/errException"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="..."
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/darkGrey" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/exception"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:background="@color/lightGrey"
            android:textColor="@color/darkGrey" />
        <TextView
            android:id="@+id/errCause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="..."
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/darkGrey" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/cause"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:background="@color/lightGrey"
            android:textColor="@color/darkGrey" />
    	<TextView
            android:id="@+id/errText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:inputType="textEmailAddress"
            android:text="..."
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/darkGrey" />
    	<TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/errText"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:background="@color/lightGrey"
            android:textColor="@color/darkGrey" />
    	<TextView
            android:id="@+id/errSection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="..."
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/darkGrey" />
        	<TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/section"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:background="@color/lightGrey"
            android:textColor="@color/darkGrey" />
    	<TextView
            android:id="@+id/errStackTrace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="..."
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/darkGrey" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/oaException"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
        <TextView
            android:id="@+id/errMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="..."
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/darkGrey" /> 
    </LinearLayout>
    
    

</LinearLayout>
