<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:id="@+id/showProposalBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:background="@color/black" >
    
        <ImageView
	        android:id="@+id/imageView2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_centerVertical="true"
	        android:src="@drawable/oa_left" />
    	
    	<ImageView
	        android:id="@+id/imageView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_centerVertical="true"
	        android:src="@drawable/open_antrag" />
	    
	    <TextView
	        android:id="@+id/textHeadline"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_centerVertical="true"
	        android:text="@string/setFilter"
   	        android:textColor ="@color/lightGrey"
	        android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>
   	<TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/representative"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:background="@color/lightGrey"
            android:textColor="@color/darkGrey" />
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
    
        <ImageView
            android:id="@+id/portraitImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/repName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="..."
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/darkGrey" />
        
    </LinearLayout>
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
    	<TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/party"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:background="@color/lightGrey"
            android:textColor="@color/darkGrey" />
        <TextView
            android:id="@+id/repParty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="..."
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/darkGrey" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/email"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:background="@color/lightGrey"
            android:textColor="@color/darkGrey" />
    	<TextView
            android:id="@+id/repMail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:inputType="textEmailAddress"
            android:text="..."
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/darkGrey" />
    	<TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/twitter"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:background="@color/lightGrey"
            android:textColor="@color/darkGrey" />
    	<TextView
            android:id="@+id/repTwitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="..."
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/darkGrey" />
    </LinearLayout>

</LinearLayout>
